--- a/src/views/productList.handlebars
+++ b/src/views/productList.handlebars
@@ -1,6 +1,6 @@
 <div>
     <div class="userProfile">
-        <h2>Bienvenido Flowerier</h2>
+        <h2>Bienvenido Usuario</h2>
         <p>{{user.firstName}} {{user.lastName}}</p>
         <p>{{user.email}}</p>
         <p>Rol {{user.role}}</p>
