--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -17,6 +17,6 @@
         <input type="password" name="password">
         <input type="submit">
     </form>
-    <p>¿Ya eres un Flowerier? <a href="/login">Ingresa aquí</a></p>
+    <p>¿Ya eres un Usuario? <a href="/login">Ingresa aquí</a></p>
 </div>
 <script src="/files/js/register.js"></script>
