--- a/src/views/userProfile.handlebars
+++ b/src/views/userProfile.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <h1>Bienvenido Flowerier!</h1>
+    <h1>Bienvenido Usuario!</h1>
     <p>{{user.firstName}} {{user.lastName}}</p>
     <p>{{user.email}}</p>
     <p>{{user.age}}</p>
