intento de entregable-06-09-23

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <h1 id="title">Flowery 4107 Webchat</h1>
+    <h1 id="title">MarcelaB and team are in chat help</h1>
     <button class="logout">Logout</button>
 </div>
 <div>
